tools/flowc/tests/errors/error13.flow
import string;

// Test on detection of nested local variable re-declaration 

fun1() -> int {
	x = 5;
	(\y, x -> x + y)(x, 1)
}
